Fix linting issues, add oasdiff to precommit and github actions
